# lang_un_rag

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  QUICKSTART.md  README.md  ROBUST_WATCHER.md  check_qdevice_reembedded.py  check_qdevice_similarity.py  debug_similarity.py  docker-compose.override.yml  docker-compose.override.yml.back  docker-compose.yml  examples.sh  markdown_docs  out.json  out.txt  pyproject.toml  requirements.txt  run.sh  test_batch_size.py  watcher_config.env
.github/: copilot-instructions.md
app/: chunker.py  config.py  document_processor.py  extractors.py  main.py  query_chunks.py  vector_store.py
markdown_files/: sample.md
scripts/: manage_watcher.sh  reindex_with_extractors.py  robust_nfs_watcher.py  wait_and_exec.sh  watch_and_index.py  watcher.py
