[project]
name = "lang-un-rag"
version = "0.1.0"
description = "A RAG system for markdown files using LangChain, Unstructured, and Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.18",
    "unstructured[md]>=0.11.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "ollama>=0.1.0",
    "langchain-text-splitters",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "langchain-core>=0.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-ollama>=1.0.0",
    "sentence-transformers>=5.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
